fix: install consul path

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -26,7 +26,7 @@
     - name: Unarchive Consul package
       unarchive:
         src: "/tmp/{{ consul_pkg }}"
-        dest: "{{ consul_bin_path.path }}/"
+        dest: "{{ consul_bin_path }}/"
         creates: "{{ consul_bin_path }}/consul"
       become: false
       tags:
