--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -10,6 +10,21 @@
   ansible.builtin.package:
     name: unzip
     state: present
+  become: true
+
+- name: Ensure python3 is installed
+  ansible.builtin.package:
+    name: python3
+    state: present
+
+- name: Install boto dependencies
+      ansible.builtin.pip:
+        name:
+          - boto3
+          - botocore
+      environment:
+        PIP_BREAK_SYSTEM_PACKAGES: 1
+      become: true
 
 - name: Download Consul package
   get_url:
