--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -72,6 +72,7 @@
     key_id: "{{ kms_key_id }}"
     value: "{{ consul_token }}"
     region: "us-east-1"
+  become_user: ubuntu
 
 - name: Create Consul Systemd Service
   ansible.builtin.template:
