--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -70,7 +70,7 @@
     name: "consul-token-ansible_hostname"
     string_type: "SecureString"
     key_id: "{{ kms_key_id }}"
-    value: "{{ consul_token }}"
+    value: "{{ consul_token.stdout }}"
     region: "us-east-1"
   become_user: ubuntu
 
