--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -63,14 +63,14 @@
 
 - name: Generate Consul Token
   shell: uuidgen
-  register: consul_token
+  register: consul_token.stdout
 
 - name: Save Consul Token to SSM
   community.aws.ssm_parameter:
     name: "consul-token-ansible_hostname"
     string_type: "SecureString"
     key_id: "{{ kms_key_id }}"
-    value: "{{ consul_token.stdout_lines[0] }}"
+    value: "{{ consul_token }}"
     region: "us-east-1"
   become_user: ubuntu
 
