--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -62,15 +62,15 @@
   register: consul_keygen
 
 - name: Generate Consul Token
-  shell: uuidgen
-  register: consul_token
+  shell: uuidgen > "{{ consul_config_path  }}/consul.token"
+  #register: consul_token
 
 - name: Save Consul Token to SSM
   community.aws.ssm_parameter:
     name: "consul-token-ansible_hostname"
     string_type: "SecureString"
     key_id: "{{ kms_key_id }}"
-    value: "{{ consul_token.stdout }}"
+    value: "{{lookup('ansible.builtin.file', 'etc/consul/consul.token') }}"
     region: "us-east-1"
   become_user: ubuntu
 
