--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -76,7 +76,7 @@
     name: "consul-token-ansible_hostname"
     string_type: "SecureString"
     key_id: "{{ kms_key_id }}"
-    value: "{{lookup('ansible.builtin.file', 'etc/consul/consul.token') }}"
+    value: "{{lookup('ansible.builtin.file', '/etc/consul/consul.token') }}"
     region: "us-east-1"
   become_user: ubuntu
 
