--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -76,9 +76,10 @@
   ansible.builtin.template:
     src: templates/consul.service.j2
     dest: /lib/systemd/system/consul.service
-    owner: bin
-    group: wheel
+    owner: root
+    group: root
     mode: '0644'
+  become: true
   register: systemd_unit
 
 - name: Reload systemd
