--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -94,7 +94,7 @@
 
 - name: Create Consul Configuration
   ansible.builtin.template:
-    src: /templates/config.json.j2
+    src: templates/config.json.j2
     dest: "{{ consul_config_path  }}/config.json"
     owner: root
     group: root
